show OSD when keyboard backlight changed through hardware

Show the brightness OSD when upower signals that the keyboard backlight changed through hardware, eg a firmware-handled shortcut, for which so far no OSD was shown.

BUG: 406790

FIXED-IN: 6.0